--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,14 +8,29 @@
       "version": "detect"
     }
   },
-  "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:@next/next/recommended", "plugin:prettier/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "next/core-web-vitals",
+    "plugin:@next/next/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "plugin:react/recommended",
+    "plugin:tailwindcss/recommended",
+    "prettier"
+  ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "react-hooks", "eslint-plugin-import-helpers"],
+  "plugins": [
+    "@typescript-eslint",
+    "eslint-plugin-import-helpers",
+    "react",
+    "react-hooks",
+    "tailwindcss"
+  ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
@@ -25,7 +40,14 @@
       "warn",
       {
         "newlinesBetween": "always",
-        "groups": [["/^react/", "/^next/", "/^@next/"], "/module/", "/components/", "/^@shared/", "/absolute/", ["parent", "sibling", "index"]],
+        "groups": [
+          ["/^react/", "/^next/", "/^@next/"],
+          "/module/",
+          "/components/",
+          "/^@shared/",
+          "/absolute/",
+          ["parent", "sibling", "index"]
+        ],
         "alphabetize": { "order": "asc", "ignoreCase": true }
       }
     ]
