--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.8.8",
     "vitest": "^0.30.1"
   }
