--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "lodash": "^4.17.21",
     "next": "^13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.8.8",
