feat: faceit auth

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_API_URL = "http://localhost:3000/api"
+
+# NEXT AUTH
+NEXTAUTH_URL = "http://localhost:3000"
+NEXTAUTH_SECRET = "" # openssl rand -hex 32
+
+# Next Auth FACEIT Provider secrets
+FACEIT_CLIENT_ID = ""
+FACEIT_CLIENT_SECRET = ""
