--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "framer-motion": "^10.12.18",
     "lodash": "^4.17.21",
     "next": "^13.4.8",
     "next-auth": "^4.22.1",
