--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.8.8",
+    "tailwind-scrollbar": "^3.0.4",
     "vitest": "^0.30.1"
   }
 }
