--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.18",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "^13.4.8",
-    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "eslint-plugin-prettier": "^4.2.1",
