--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,8 @@
 {
+  "$schema": "https://json.schemastore.org/eslintrc",
   "env": {
     "browser": true,
     "es2021": true
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
   },
   "extends": [
     "eslint:recommended",
@@ -27,29 +23,23 @@
   "plugins": [
     "@typescript-eslint",
     "eslint-plugin-import-helpers",
+    "eslint-plugin-tailwindcss",
+    "prettier",
     "react",
     "react-hooks",
     "tailwindcss"
   ],
+  "root": true,
   "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/react-in-jsx-scope": "off",
     "prettier/prettier": "error",
-    "import-helpers/order-imports": [
-      "warn",
-      {
-        "newlinesBetween": "always",
-        "groups": [
-          ["/^react/", "/^next/", "/^@next/"],
-          "/module/",
-          "/components/",
-          "/^@shared/",
-          "/absolute/",
-          ["parent", "sibling", "index"]
-        ],
-        "alphabetize": { "order": "asc", "ignoreCase": true }
-      }
-    ]
+    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "react/react-in-jsx-scope": "off",
+    "tailwindcss/classnames-order": "error"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
