--- a/package.json
+++ b/package.json
@@ -12,34 +12,38 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@types/node": "18.16.0",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "@vercel/analytics": "^1.0.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "^13.4.8",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-loading-skeleton": "^3.3.0",
-    "swr": "^2.1.5",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "react-loading-skeleton": "^3.3.0"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "2.8.8",
+    "@types/node": "18.16.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vercel/analytics": "^1.0.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "postcss": "8.4.23",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
     "tailwind-scrollbar": "^3.0.4",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4",
     "vitest": "^0.30.1"
   }
 }
