--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,7 +16,7 @@
     "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "next": "^13.4.8",
+    "next": "^13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
+    "@t3-oss/env-nextjs": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "18.16.0",
@@ -44,6 +46,7 @@
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "vitest": "^0.30.1"
+    "vitest": "^0.30.1",
+    "zod": "^3.21.4"
   }
 }
