--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
+    "@types/country-list": "^2.1.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "18.16.0",
@@ -36,15 +37,18 @@
     "@typescript-eslint/parser": "^7.1.0",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
+    "country-list": "^2.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-tailwindcss": "^3.14.3",
+    "moment": "^2.30.1",
     "postcss": "8.4.23",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.4.0",
+    "swr": "^2.2.5",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.4.1",
     "typescript": "5.0.4",
