--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "framer-motion": "^10.12.18",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "next": "^14.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "15.0.0",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.3.0"
   },
@@ -31,15 +31,15 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "18.16.0",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.14",
     "country-list": "^2.3.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "5.1.3",
@@ -54,5 +54,11 @@
     "typescript": "5.0.4",
     "vitest": "^0.30.1",
     "zod": "^3.22.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
