--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^11.11.9",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "15.0.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.5.0"
   },
