--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,8 @@
     "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react/react-in-jsx-scope": "off",
-    "tailwindcss/classnames-order": "error"
+    "tailwindcss/classnames-order": "error",
+    "@typescript-eslint/no-unused-vars": "warn"
   },
   "settings": {
     "react": {
