--- a/package.json
+++ b/package.json
@@ -21,44 +21,38 @@
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "@t3-oss/env-nextjs": "^0.6.1",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@types/country-list": "^2.1.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.12",
-    "@types/node": "18.16.0",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@types/node": "22.7.8",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
     "@vercel/analytics": "^1.3.1",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "10.4.20",
     "country-list": "^2.3.0",
-    "eslint": "8.57.1",
+    "eslint": "9.13.0",
     "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
-    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "moment": "^2.30.1",
-    "postcss": "8.4.23",
+    "postcss": "8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "swr": "^2.2.5",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.0.4",
-    "vitest": "^0.30.1",
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3",
+    "vitest": "^2.1.3",
     "zod": "^3.23.8"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
   }
 }
