--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "eventemitter3": "^5.0.1",
     "framer-motion": "^11.11.9",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "15.0.0",
+    "protobufjs": "^7.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
-    "react-loading-skeleton": "^3.5.0"
+    "react-loading-skeleton": "^3.5.0",
+    "react-use-websocket": "^4.10.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
