--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.0.0",
     "protobufjs": "^7.4.0",
     "react": "18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
