refactor: show player not found msg

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ JWT_SECRET = "" # openssl rand -hex 32
 # FACEIT client secrets
 NEXT_PUBLIC_FACEIT_CLIENT_ID = ""
 FACEIT_CLIENT_SECRET = ""
+
+STEAM_API_KEY = ""
