feat: premade stats

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,7 @@ JWT_SECRET = "" # openssl rand -hex 32
 NEXT_PUBLIC_FACEIT_CLIENT_ID = ""
 FACEIT_CLIENT_SECRET = ""
 
+FACEIT_OPEN_API_TOKEN = ""
+FACEIT_DEMOS_API_TOKEN = ""
+
 STEAM_API_KEY = ""
