fix: missing type definition

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,12 @@
   ],
   "root": true,
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react/react-in-jsx-scope": "off",
