--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,15 @@ FACEIT_OPEN_API_TOKEN = ""
 FACEIT_DEMOS_API_TOKEN = ""
 
 STEAM_API_KEY = ""
+
+# firebase
+NEXT_PUBLIC_FIREBASE_API_KEY = ""
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN = ""
+NEXT_PUBLIC_FIREBASE_PROJECT_ID = ""
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = ""
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = ""
+NEXT_PUBLIC_FIREBASE_APP_ID = ""
+
+FIREBASE_CLIENT_EMAIL = ""
+FIREBASE_PRIVATE_KEY = ""
+FIREBASE_DATABASE_URL = ""
