--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@vercel/edge-config": "^1.4.0",
     "eventemitter3": "^5.0.1",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
@@ -32,7 +34,6 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "@t3-oss/env-nextjs": "^0.11.1",
     "@types/country-list": "^2.1.4",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.12",
@@ -50,6 +51,7 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "jiti": "^2.4.0",
     "moment": "^2.30.1",
     "postcss": "8.4.47",
     "prettier": "^3.3.3",
