feat: added edge config

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ NEXT_PUBLIC_FIREBASE_APP_ID = ""
 FIREBASE_CLIENT_EMAIL = ""
 FIREBASE_PRIVATE_KEY = ""
 FIREBASE_DATABASE_URL = ""
+
+EDGE_CONFIG = ""
