feat: mock demo url for dev

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ EDGE_CONFIG = ""
 # parser
 NEXT_PUBLIC_PARSER_URL = "http://localhost:8001/api"
 PARSER_API_KEY = "dev"
+
+NODE_ENV = "development"
