--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,14 @@
     "react-hooks/rules-of-hooks": "error",
     "react/react-in-jsx-scope": "off",
     "tailwindcss/classnames-order": "error",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ]
   },
   "settings": {
     "react": {
