chore: updated eslint error rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
   "root": true,
   "rules": {
     "prettier/prettier": [
-      "error",
+      "warn",
       {
         "endOfLine": "auto"
       }
