chore: search client side request

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ FACEIT_CLIENT_SECRET = ""
 
 FACEIT_OPEN_API_TOKEN = ""
 FACEIT_DEMOS_API_TOKEN = ""
+NEXT_PUBLIC_FACEIT_OPEN_API_CLIENT_TOKEN = ""
 
 STEAM_API_KEY = ""
 
